--- a/index.html
+++ b/index.html
@@ -1,290 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>SNCT – 22ª Semana Nacional de Ciência e Tecnologia</title>
+  <meta http-equiv="refresh" content="0; url=https://script.google.com/macros/s/AKfycbw1hP827zVoKdsUvxdSIZXhki4x6c_NbGYCVdPMm2eMh9WFYkWl8hAorOlf_e3Y_Q3p/exec">
+  <title>Redirecionando...</title>
   <style>
-    :root {
-      --vermelho-ufsj: #9e2a2f;
-      --preto-ufsj: #000000;
-      --cinza-ufsj: #808080;
-      --amarelo-ufsj: #F7B32B;
-      --vermelho-claro: #f29b9c;
-    }
-
     body {
+      margin: 0;
+      padding: 0;
       font-family: Arial, sans-serif;
-      padding: 40px;
       background-color: #f9f9f9;
-      color: var(--preto-ufsj);
       display: flex;
       justify-content: center;
+      align-items: center;
+      height: 100vh;
+      flex-direction: column;
     }
 
-    form {
-      max-width: 900px;
-      width: 100%;
-      font-size: 1.3em;
-    }
-
-    h2 {
-      text-align: center;
-      color: var(--vermelho-ufsj);
-      margin-bottom: 40px;
-      font-size: 2.2em;
-    }
-
-    label {
-      display: block;
-      margin-top: 20px;
-      font-weight: bold;
-      font-size: 1.2em;
-    }
-
-    input[type="text"],
-    input[type="email"],
-    textarea,
-    select {
-      width: 100%;
-      padding: 15px;
-      margin-top: 8px;
-      border: 2px solid var(--vermelho-ufsj);
-      border-radius: 10px;
-      font-size: 1.1em;
-      outline: none;
-      transition: border 0.3s, box-shadow 0.3s;
-      box-sizing: border-box;
-    }
-
-    input[type="text"]:focus,
-    input[type="email"]:focus,
-    textarea:focus,
-    select:focus {
-      border-color: var(--amarelo-ufsj);
-      box-shadow: 0 0 8px rgba(247,179,43,0.5);
-    }
-
-    button {
-      margin-top: 25px;
-      padding: 15px 30px;
-      background-color: var(--vermelho-ufsj);
-      color: white;
-      border: none;
-      cursor: pointer;
-      border-radius: 8px;
-      font-weight: bold;
-      font-size: 1.2em;
-      transition: background-color 0.3s;
-    }
-
-    button:hover {
-      background-color: #7b1e22;
-    }
-
-    .btn-selecao {
-      padding: 10px 15px;
-      border: 2px solid var(--vermelho-ufsj);
-      border-radius: 8px;
-      background: white;
-      color: black;
-      cursor: pointer;
-      font-size: 1em;
-      font-weight: bold;
-      transition: all 0.2s;
-    }
-
-    .btn-selecao.selecionado {
-      background-color: var(--vermelho-ufsj);
-      color: white;
-    }
-
-    /* Slider */
-    #slider {
-      width: 100%;
-      height: 50px;
-      border-radius: 25px;
-      background-color: var(--vermelho-claro);
-      -webkit-appearance: none;
-      margin-top: 15px;
-    }
-
-    #slider::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      appearance: none;
-      width: 50px;
-      height: 50px;
-      background: var(--amarelo-ufsj);
-      border-radius: 50%;
-      cursor: pointer;
-      border: 3px solid var(--vermelho-ufsj);
-      margin-top: -13px;
-    }
-
-    #slider::-moz-range-thumb {
-      width: 50px;
-      height: 50px;
-      background: var(--amarelo-ufsj);
-      border-radius: 50%;
-      cursor: pointer;
-      border: 3px solid var(--vermelho-ufsj);
-    }
-
-    /* Logo em barra horizontal */
     #logoContainer {
-      width: 100%;
+      padding: 50px 30px 0 30px; /* 50px só no topo */
+      border-radius: 12px;
+      overflow: hidden;
+      background-color: #ffffff;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       text-align: center;
-      padding: 0;
-      background-color: var(--vermelho-ufsj);
-      box-sizing: border-box;
-      margin-bottom: 30px;
     }
 
     #logoSNCT {
-      max-width: 800px;
-      width: 85%;
+      max-width: 100%;
+      width: 102%;
       height: auto;
     }
 
-    @media (max-width: 600px) {
-      #slider {
-        width: 100%;
-      }
-      body {
-        padding: 20px;
-      }
-      form {
-        font-size: 1.1em;
-      }
-      h2 {
-        font-size: 1.8em;
-      }
+    h2 {
+      font-size: 90%;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
-
-<form id="formulario">
-
-  <!-- Logo em barra horizontal -->
   <div id="logoContainer">
-    <img id="logoSNCT" src="https://github.com/capcodeCAP/satisfacao/blob/68e15d31167c4ed4c375679bb5df57abd906182b/bar.png?raw=true" 
+    <img id="logoSNCT" 
+         src="https://github.com/capcodeCAP/satisfacao/blob/68e15d31167c4ed4c375679bb5df57abd906182b/bar.png?raw=true" 
          alt="SNCT – 22ª Semana Nacional de Ciência e Tecnologia">
+    <h2>SNCT – 22ª Semana Nacional de Ciência e Tecnologia</h2>
+    <p>Redirecionando...</p>
   </div>
-
-  <h2>SNCT – 22ª Semana Nacional de Ciência e Tecnologia</h2>
-
-  <!-- Avaliação do evento -->
-  <label>😊 Você gostou do evento? (1 = Não gostei, 10 = Gostei muito)</label>
-  <div style="display:flex; align-items:center; gap:20px; margin-top:15px;">
-    <input type="range" name="gostou" min="1" max="10" value="6" required id="slider">
-    <span id="emoji" style="font-size:2em;">😐</span>
-    <output id="valor" style="font-weight:bold; width:40px; text-align:center; font-size:1.5em;">6</output>
-  </div>
-
-  <!-- Engenharia -->
-  <label>🏗️ No futuro, gostaria de cursar alguma engenharia? Se sim, qual chamou sua atenção?</label>
-  <select name="engenharia" required>
-    <option value="">Selecione</option>
-    <option value="Engenharia de Bioprocessos">🧪 Engenharia de Bioprocessos</option>
-    <option value="Engenharia de Telecomunicações">📡 Engenharia de Telecomunicações</option>
-    <option value="Engenharia Mecatrônica">🤖 Engenharia Mecatrônica</option>
-    <option value="Engenharia Química">⚗️ Engenharia Química</option>
-    <option value="Engenharia Civil">🏗️ Engenharia Civil</option>
-    <option value="Nenhuma das opções">❌ Nenhuma das opções</option>
-  </select>
-
-  <!-- Atividade -->
-  <label>✨ Se sentiu atraído por alguma atividade em especial? Tem alguma sugestão?</label>
-  <textarea name="atividade" rows="5" placeholder="Digite aqui suas impressões ou sugestões..."></textarea>
-
-  <!-- Convite -->
-  <label>📩 Se a UFSJ CAP oferecer alguma atividade ou curso, você gostaria de receber um convite?</label>
-  <div style="display:flex; gap:15px; margin-top:15px;">
-    <button type="button" class="btn-selecao" onclick="selecionarConvite('Sim', this)">✅ Sim</button>
-    <button type="button" class="btn-selecao" onclick="selecionarConvite('Não', this)">❌ Não</button>
-  </div>
-
-  <input type="hidden" name="convite" id="convite" required>
-
-  <!-- Email, inicialmente oculto -->
-  <div id="emailSection" style="display:none; margin-top:15px;">
-    <label>✉️ Se sim, deixe seu email</label>
-    <div style="display:flex; align-items:center; gap:8px; margin-bottom:8px;">
-      <input type="text" id="email" name="email" placeholder="seu@email.com">
-    </div>
-    <div style="display:flex; gap:8px; flex-wrap:wrap; margin-bottom:15px;">
-      <button type="button" class="btn-selecao" onclick="selecionarEmail('@gmail.com', this)">@gmail.com</button>
-      <button type="button" class="btn-selecao" onclick="selecionarEmail('@yahoo.com', this)">@yahoo.com</button>
-      <button type="button" class="btn-selecao" onclick="selecionarEmail('@yahoo.com.br', this)">@yahoo.com.br</button>
-      <button type="button" class="btn-selecao" onclick="selecionarEmail('@hotmail.com', this)">@hotmail.com</button>
-      <button type="button" class="btn-selecao" onclick="selecionarEmail('@ufsj.edu.br', this)">@ufsj.edu.br</button>
-      <button type="button" class="btn-selecao" onclick="limparEmail()">Limpar</button>
-    </div>
-  </div>
-
-  <button type="submit">Enviar Resposta</button>
-
-</form>
-
-<p id="resposta" style="margin-top:20px;color:green; font-size:1.2em;"></p>
-
-<script>
-  // Slider com emojis
-  const slider = document.getElementById('slider');
-  const output = document.getElementById('valor');
-  const emoji = document.getElementById('emoji');
-
-  slider.addEventListener('input', () => {
-    const val = slider.value;
-    output.value = val;
-    if(val <= 3) emoji.textContent = '😞';
-    else if(val <= 6) emoji.textContent = '😐';
-    else if(val <= 8) emoji.textContent = '🙂';
-    else emoji.textContent = '😃';
-  });
-
-  // Botões Sim/Não
-  function selecionarConvite(valor, btn) {
-    document.getElementById('convite').value = valor;
-    const buttons = btn.parentNode.querySelectorAll('button');
-    buttons.forEach(b => b.classList.remove('selecionado'));
-    btn.classList.add('selecionado');
-    document.getElementById('emailSection').style.display = valor === 'Sim' ? 'block' : 'none';
-  }
-
-  // Botões email
-  function selecionarEmail(dom, btn) {
-    const input = document.getElementById('email');
-    let valor = input.value.split('@')[0];
-    input.value = valor + dom;
-    const buttons = document.getElementById('emailSection').querySelectorAll('button');
-    buttons.forEach(b => b.classList.remove('selecionado'));
-    btn.classList.add('selecionado');
-    input.focus();
-  }
-
-  function limparEmail() {
-    const input = document.getElementById('email');
-    input.value = '';
-    const buttons = document.getElementById('emailSection').querySelectorAll('button');
-    buttons.forEach(b => b.classList.remove('selecionado'));
-    input.focus();
-  }
-
-  // Envio do formulário para Apps Script
-  const form = document.getElementById("formulario");
-  form.addEventListener("submit", e => {
-    e.preventDefault();
-    const dados = Object.fromEntries(new FormData(form));
-    google.script.run
-      .withSuccessHandler(msg => {
-        alert("Obrigado! Sua resposta foi enviada com sucesso!");
-        window.location.href = "https://www.ufsj.edu.br/"; // redireciona
-      })
-      .salvarResposta(dados);
-  });
-
-</script>
-
 </body>
 </html>
